--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+What is the Happy Cow Game?
+
+Previously, the Happy Cow Game was an educational board game to inform you and me about a cow's digestion, and the advantages and disadvantages of using feeding
+So why this Project?
+
+As a board game, the Happy Cow Game is a useful resource, but to make it more versatile it is being launched as a web application. This means you can soon easily share and play it with your friends.
+When can I Play Online?
+
+I am in my third year of a computer science degree, this project is my final peice. I will work on it from the 26th January - 8th May. However, a test version should be accessible in March so you can play it, give feedback and help me improve the game.
