updating the gh-pages branch

--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Happy Cow Game by sis17</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-
-      <header>
-        <h1>Happy Cow Game</h1>
-        <p>An educational game about a cow&#39;s digestion.</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/sis17/HappyCowGame" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/sis17/HappyCowGame/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/sis17/HappyCowGame/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h3>
-<a id="what-is-the-happy-cow-game" class="anchor" href="#what-is-the-happy-cow-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is the Happy Cow Game?</h3>
-
-<p>Previously, the Happy Cow Game was an educational board game to inform you and me about a cow's digestion, and the advantages and disadvantages of using feeding </p>
-
-<h3>
-<a id="so-why-this-project" class="anchor" href="#so-why-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>So why this Project?</h3>
-
-<p>As a board game, the Happy Cow Game is a useful resource, but to make it more versatile it is being launched as a web application. This means you can soon easily share and play it with your friends.</p>
-
-<h3>
-<a id="when-can-i-play-online" class="anchor" href="#when-can-i-play-online" aria-hidden="true"><span class="octicon octicon-link"></span></a>When can I Play Online?</h3>
-
-<p>I am in my third year of a computer science degree, this project is my final peice. I will work on it from the 26th January - 8th May. However, a test version should be accessible in March so you can play it, give feedback and help me improve the game.</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/sis17">sis17</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
+happy cow game
