--- a/designs/index.html
+++ b/designs/index.html
@@ -135,8 +135,8 @@
 
       <div class="row">
         <div class="col-xs-12">
-          
-          <h2 id="drawn-designs"><a href="./drawings/">Drawn Designs</a></h2>
+
+          <h2 id="drawn-designs">Drawn Designs</h2>
 
           <p>These are drawings made to describe different scenes the Happy Cow Game will need.</p>
 
